--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".views.login.OnBoarding">
+    tools:context=".views.auth.views.RegisterFragment">
 
     <ImageView
         android:id="@+id/imageView"
@@ -26,8 +26,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/silahkan_login"
-        android:textSize="23sp"
+        android:text="@string/title_signup_page"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -35,6 +35,35 @@
         app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
         android:alpha="0"
         tools:alpha="100"/>
+
+    <TextView
+        android:id="@+id/nameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/name"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+        android:alpha="0"
+        tools:alpha="100"/>
+
+    <com.capstone.nutrisense.views.auth.views.NameEditText
+        android:id="@+id/ed_register_name"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:hint="@string/enter_your_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
+        app:startIconDrawable="@drawable/person_baseline"
+        android:alpha="0"
+        tools:alpha="100" />
 
 
     <TextView
@@ -46,25 +75,24 @@
         android:text="@string/email"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+        app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
         android:alpha="0"
         tools:alpha="100"/>
 
-
-    <com.capstone.nutrisense.views.login.views.EmailEditText
-        android:id="@+id/ed_login_email"
+    <com.capstone.nutrisense.views.auth.views.EmailEditText
+        android:id="@+id/ed_register_email"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="6dp"
+        android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:alpha="0"
-        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTextView"
+        app:startIconDrawable="@drawable/email_baseline"
+        android:inputType="textEmailAddress"
+        android:alpha="0"
         tools:alpha="100" />
 
     <TextView
@@ -76,13 +104,12 @@
         android:text="@string/password"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
-        app:startIconDrawable="@drawable/email_baseline"
+        app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
         android:alpha="0"
         tools:alpha="100"/>
 
-    <com.capstone.nutrisense.views.login.views.PasswordEditText
-        android:id="@+id/ed_login_password"
+    <com.capstone.nutrisense.views.auth.views.PasswordEditText
+        android:id="@+id/ed_register_password"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -98,21 +125,21 @@
         android:alpha="0"
         tools:alpha="100" />
 
-    <com.capstone.nutrisense.views.login.views.ButtonCustom
-        android:id="@+id/login_button"
+
+    <com.capstone.nutrisense.views.auth.views.ButtonCustom
+        android:id="@+id/register_button"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/masuk"
+        android:text="@string/signup"
         android:textStyle="bold"
-        android:enabled="false"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
+        app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
         android:alpha="0"
         tools:alpha="100"/>
 
@@ -120,35 +147,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintTop_toBottomOf="@+id/register_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center_horizontal"
         >
 
         <TextView
-            android:id="@+id/tv_not_registered"
+            android:id="@+id/tv_registered"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/belum_punya_akun"
+            android:text="@string/sudah_punya_akun"
             android:alpha="0"
             tools:alpha="100"/>
 
         <Button
-            android:id="@+id/btn_to_register"
+            android:id="@+id/btn_to_login"
             style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/daftar_sekarang"
-            android:textColor="@color/red"
+            android:text="@string/masuk_sekarang"
             android:textStyle="bold"
+            android:textColor="@color/red"
             android:alpha="0"
             tools:alpha="100"/>
 
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
@@ -158,14 +185,13 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.30191082"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="64dp"
-        android:orientation="horizontal" />
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.30191082"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
