--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -49,7 +49,7 @@
         android:alpha="0"
         tools:alpha="100"/>
 
-    <com.capstone.nutrisense.views.auth.views.NameEditText
+    <com.capstone.nutrisense.views.auth.authviews.NameEditText
         android:id="@+id/ed_register_name"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
@@ -79,7 +79,7 @@
         android:alpha="0"
         tools:alpha="100"/>
 
-    <com.capstone.nutrisense.views.auth.views.EmailEditText
+    <com.capstone.nutrisense.views.auth.authviews.EmailEditText
         android:id="@+id/ed_register_email"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
@@ -108,7 +108,7 @@
         android:alpha="0"
         tools:alpha="100"/>
 
-    <com.capstone.nutrisense.views.auth.views.PasswordEditText
+    <com.capstone.nutrisense.views.auth.authviews.PasswordEditText
         android:id="@+id/ed_register_password"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
@@ -126,7 +126,7 @@
         tools:alpha="100" />
 
 
-    <com.capstone.nutrisense.views.auth.views.ButtonCustom
+    <com.capstone.nutrisense.views.auth.authviews.ButtonCustom
         android:id="@+id/register_button"
         android:layout_width="0dp"
         android:layout_height="50dp"
