Logic at Fragment auth

--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -32,9 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
-        android:alpha="0"
-        tools:alpha="100"/>
+        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"/>
 
     <TextView
         android:id="@+id/nameTextView"
@@ -45,9 +43,7 @@
         android:text="@string/name"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-        android:alpha="0"
-        tools:alpha="100"/>
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>
 
     <com.capstone.nutrisense.views.auth.authviews.NameEditText
         android:id="@+id/ed_register_name"
@@ -61,9 +57,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameTextView"
-        app:startIconDrawable="@drawable/person_baseline"
-        android:alpha="0"
-        tools:alpha="100" />
+        app:startIconDrawable="@drawable/person_baseline" />
 
 
     <TextView
@@ -75,24 +69,17 @@
         android:text="@string/weight"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
-        android:alpha="0"
-        tools:alpha="100"/>
+        app:layout_constraintTop_toBottomOf="@+id/ed_register_name"/>
 
-    <com.capstone.nutrisense.views.auth.authviews.WeightEditText
-        android:id="@+id/ed_register_email"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+
+    <NumberPicker
+        android:id="@+id/weight_picker"
+        android:layout_width="50dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/emailTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
-        android:hint="@string/enter_your_weight"
-        android:alpha="0"
-        tools:alpha="100" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/passwordTextView"
@@ -103,12 +90,10 @@
         android:text="@string/date_birthday"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
-        android:alpha="0"
-        tools:alpha="100"/>
+        app:layout_constraintTop_toBottomOf="@+id/weight_picker"/>
 
-    <com.capstone.nutrisense.views.auth.authviews.BirthdayDateText
-        android:id="@+id/ed_register_password"
+    <com.capstone.nutrisense.views.auth.authviews.NameEditText
+        android:id="@+id/birthday_picker"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -119,10 +104,7 @@
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
-        app:startIconDrawable="@drawable/lock_baseline"
-        android:alpha="0"
-        tools:alpha="100" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
 
     <com.capstone.nutrisense.views.auth.authviews.ButtonCustom
@@ -132,46 +114,13 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/signup"
+        android:text="@string/complete_personal"
         android:textStyle="bold"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
-        android:alpha="0"
-        tools:alpha="100"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/register_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center_horizontal"
-        >
-
-        <TextView
-            android:id="@+id/tv_registered"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sudah_punya_akun"
-            android:alpha="0"
-            tools:alpha="100"/>
-
-        <Button
-            android:id="@+id/btn_to_login"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/masuk_sekarang"
-            android:textStyle="bold"
-            android:textColor="@color/red"
-            android:alpha="0"
-            tools:alpha="100"/>
-
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/birthday_picker" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
