--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -97,7 +97,7 @@
         android:layout_marginEnd="32dp"
         android:text="@string/masuk"
         android:textStyle="bold"
-        android:enabled="false"
+        android:enabled="true"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
