--- a/app/src/main/res/navigation/navigation_auth.xml
+++ b/app/src/main/res/navigation/navigation_auth.xml
@@ -10,17 +10,34 @@
         android:id="@+id/loginFragment"
         android:name="com.capstone.nutrisense.views.auth.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+
+        <action
+        android:id="@+id/action_loginFragment_to_registerFragment"
+        app:destination="@id/registerFragment" />
+
+        <action
+            android:id="@+id/action_loginFragment_to_personalFragment"
+            app:destination="@id/personalFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.capstone.nutrisense.views.auth.RegisterFragment"
+        android:label="fragment_register"
+        tools:layout="@layout/fragment_register" >
+
+        <action
+        android:id="@+id/action_registerFragment_to_loginFragment"
+        app:destination="@id/loginFragment" />
+    </fragment>
+
+
     <fragment
         android:id="@+id/personalFragment"
         android:name="com.capstone.nutrisense.views.auth.PersonalFragment"
         android:label="fragment_personal"
         tools:layout="@layout/fragment_personal" />
-    <fragment
-        android:id="@+id/registerFragment"
-        android:name="com.capstone.nutrisense.views.auth.RegisterFragment"
-        android:label="fragment_register"
-        tools:layout="@layout/fragment_register" />
 
 
 </navigation>
