--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -75,9 +75,29 @@
     <NumberPicker
         android:id="@+id/weight_picker"
         android:layout_width="50dp"
-        android:layout_height="100dp"
+        android:layout_height="45dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/emailTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/HeightView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/height"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/weight_picker"/>
+
+    <NumberPicker
+        android:id="@+id/height_picker"
+        android:layout_width="50dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/HeightView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -90,7 +110,7 @@
         android:text="@string/date_birthday"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weight_picker"/>
+        app:layout_constraintTop_toBottomOf="@+id/height_picker"/>
 
 
     <com.capstone.nutrisense.views.auth.authviews.BirthdayDateText
