--- a/app/src/main/res/menu/menu_nav_button.xml
+++ b/app/src/main/res/menu/menu_nav_button.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_dashboard"
+        android:id="@+id/dashboardFragment"
         android:title="@string/menu_dashboard"
         android:icon="@drawable/baseline_home" />
 
     <item
-        android:id="@+id/menu_result_scan"
+        android:id="@+id/resultScanFragment"
         android:title="@string/menu_result_scan"
         android:icon="@drawable/baseline_history" />
 
     <item
-        android:id="@+id/menu_camera"
+        android:id="@+id/cameraFragment"
         android:title="@string/menu_camera"
         android:icon="@drawable/baseline_camera" />
 
     <item
-        android:id="@+id/menu_setting"
+        android:id="@+id/settingsFragment"
         android:title="@string/settings"
         android:icon="@drawable/baseline_settings" />
 
