--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,53 +1,56 @@
-<?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation_auth"
+    android:id="@+id/nav_graph"
     app:startDestination="@id/loginFragment">
 
+    <fragment
+        android:id="@+id/dashboardFragment"
+        android:name="com.capstone.nutrisense.views.main.DashboardFragment"
+        android:label="Dashboard" />
+
+    <fragment
+        android:id="@+id/resultScanFragment"
+        android:name="com.capstone.nutrisense.views.main.ResultScanFragment"
+        android:label="Result Scan" />
+
+    <fragment
+        android:id="@+id/cameraFragment"
+        android:name="com.capstone.nutrisense.views.main.CameraFragment"
+        android:label="Camera" />
+
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.capstone.nutrisense.views.main.SettingFragment"
+        android:label="Settings" />
 
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.capstone.nutrisense.views.auth.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
-
+        android:label="Login" >
+    <action
+        android:id="@+id/action_loginFragment_to_personalFragment"
+        app:destination="@id/personalFragment" />
         <action
         android:id="@+id/action_loginFragment_to_registerFragment"
         app:destination="@id/registerFragment" />
-
-        <action
-            android:id="@+id/action_loginFragment_to_personalFragment"
-            app:destination="@id/personalFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.capstone.nutrisense.views.auth.RegisterFragment"
-        android:label="fragment_register"
-        tools:layout="@layout/fragment_register" >
-
-        <action
+        android:label="Register" >
+    <action
         android:id="@+id/action_registerFragment_to_loginFragment"
         app:destination="@id/loginFragment" />
     </fragment>
 
-
     <fragment
         android:id="@+id/personalFragment"
         android:name="com.capstone.nutrisense.views.auth.PersonalFragment"
-        android:label="fragment_personal"
-        tools:layout="@layout/fragment_personal" >
+        android:label="Personal" >
     <action
         android:id="@+id/action_personalFragment_to_dashboardFragment"
         app:destination="@id/dashboardFragment" />
     </fragment>
-
-    <fragment
-        android:id="@+id/dashboardFragment"
-        android:name="com.capstone.nutrisense.views.main.DashboardFragment"
-        android:label="fragment_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
-
 
 </navigation>
